objects/SA_Audit__Sensitive_Data_Field__c.object
<CustomObject>
    <fields>
        <fullName>SA_Audit__Description__c</fullName>
        <label>Description</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Audit__Help__c</fullName>
        <label>Help</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Audit__Sensitive_Data_ObjectId__c</fullName>
        <label>Sensitive Data Object Name</label>
        <referenceTo>SA_Audit__Sensitive_Data__c</referenceTo>
        <relationshipName>GDPR_Field</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SA_Audit__Sensitive_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sensitive Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SA_Audit__Sensitive_Field_API__c</fullName>
        <label>Sensitive Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sensitive Data Field</label>
    <nameField>
        <label>Sensitive Data Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sensitive Data Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>